# adb_client

adb_client/: Cargo.toml
adb_client/src/: constants.rs  error.rs  lib.rs
adb_client/src/device/: adb_message_device.rs  adb_transport_message.rs  adb_usb_device.rs  mod.rs
adb_client/src/device/commands/: install.rs  shell.rs
adb_client/src/device/models/: mod.rs
adb_client/src/models/: mod.rs
adb_client/src/transports/: mod.rs  usb_transport.rs
adb_client/src/transports/usb_transport/: usb_transport_libusb.rs  usb_transport_nusb.rs
