[package]
authors.workspace = true
description = "Rust ADB (Android Debug Bridge) client library"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "adb_client"
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["tcp", "usb", "usb-auth"]
usb = ["async-io", "nusb", "futures-lite", "bincode", "sha1", "serde_repr", "rand", "num-traits", "num-bigint"]
usb-auth = []
tcp = ["rustls", "bincode", "rand", "serde_repr", "quick-protobuf", "rcgen"]

[dependencies]
async-io = { version = "2.4.0", optional = true}
base64 = { version = "0.22.1" }
bincode = { version = "1.3.3", optional = true }
byteorder = { version = "1.5.0" }
chrono = { version = "0.4.40" }
futures-lite = { version = "2.6.0", optional = true }
homedir = { version = "0.3.4" }
image = { version = "0.25.5" }
lazy_static = { version = "1.5.0", optional = true }
log = { version = "0.4.26" }
mdns-sd = { version = "0.13.2" }
num-bigint = { version = "0.8.4", package = "num-bigint-dig", optional = true }
num-traits = { version = "0.2.19", optional = true }
nusb = { git = "https://github.com/cstrahan/nusb.git", rev = "8e234a53dc41e1f6ed782dbf8ee0b2bc67339180", optional = true }
# nusb = { version = "0.1.13", optional = true }
quick-protobuf = { version = "0.8.1", optional = true }
rand = { version = "0.9.0", optional = true }
rcgen = { version = "0.13.1", optional = true }
regex = { version = "1.11.1", features = ["perf", "std", "unicode"] }
rsa = { version = "0.9.7" }
rustls = { version = "0.23.22", optional = true }
rustls-pki-types = { version = "1.11.0" }
serde = { version = "1.0.216", features = ["derive"] }
serde_repr = { version = "0.1.19", optional = true }
sha1 = { version = "0.10.6", features = ["oid"], optional = true }
thiserror = { version = "2.0.7" }

[dev-dependencies]
anyhow = { version = "1.0.93" }
criterion = { version = "0.5.1" } # Used for benchmarks

[[bench]]
harness = false
name = "benchmark_adb_push"
path = "../benches/benchmark_adb_push.rs"
